partman-auto (70) UNRELEASED; urgency=low

  * Move deletion of SVN directories to install-rc script.
  * Improve the way install-rc is called.

 -- Frans Pop <fjp@debian.org>  Sun, 13 May 2007 04:05:45 +0200

partman-auto (69) unstable; urgency=low

  [ David Härdeman ]
  * Change wipe_disk in auto-shared.sh to take an explicit argument
    rather than relying on an implicit one
  * Allow LVM and device-mapper (i.e. crypto) volumes to be deallocated.
    This partially fixes #381892 and #396023

  [ Colin Watson ]
  * Fix a couple of minor glitches if no disks are present.
  * Don't offer some_device automatic partitioning if no disks are present.
  * Merge from Ubuntu:
    - auto.d/initial_auto: If an autopartitioning choice fails, remove
      /var/lib/partman/initial_auto so that we can try again.
    - auto.d/initial_auto: If partman-auto/method is preseeded and
      partman-auto/disk is not but there is only one disk, act as though
      partman-auto/disk had been preseeded to that disk. This simplifies a
      number of preseeding scenarios complicated by the removal of devfs
      path support.

  [ Updated translations ]
  * Bulgarian (bg.po) by Damyan Ivanov
  * Bengali (bn.po) by Mahay Alam Khan (মাহে আলম)
  * Dzongkha (dz.po) by translator
  * Esperanto (eo.po) by Serge Leblanc
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Basque (eu.po) by Piarres Beobide
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by Jacobo Tarrio
  * Hebrew (he.po) by Lior Kaplan
  * Japanese (ja.po) by Kenshi Muto
  * Korean (ko.po) by Sunjae Park
  * Norwegian Bokmål (nb.po) by Bjørn Steensrud
  * Dutch (nl.po) by Bart Cornelis
  * Portuguese (pt.po) by Miguel Figueiredo
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Romanian (ro.po) by Eddy Petrișor
  * Slovenian (sl.po) by Matej Kovacic
  * Albanian (sq.po) by Elian Myftiu
  * Tamil (ta.po) by Dr.T.Vasudevan
  * Thai (th.po) by Theppitak Karoonboonyanan